Update social links

--- a/north-sea-case-study.html
+++ b/north-sea-case-study.html
@@ -58,7 +58,7 @@
 </div>
 <div class="wrapper" id="after-splash">
 <div class="inaction">
-See it in action: <a href="http://northseasurfshots.co.uk"target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a><a href="http://instagram.com/northseasurfshots"target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a><a href="http://facebook.com/northseasurfshots"target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+See it in action: <a href="http://northseasurfshots.co.uk"target="_blank"><i class="fa fa-globe" aria-hidden="true"></i></a><a href="http://instagram.com/adamandthesea"target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a><a href="http://facebook.com/northseasurfshots"target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 </div>
 <div class="study-intro">
 <p>
@@ -108,7 +108,7 @@ North Sea Surf Shots has had coverage in regional press and surfing publications
 			<span class="share__text">Share</span>
 			<ul class="share__list">
 							<li class="share__item">
-					<a href="https://twitter.com/home?status=Check%20out%20this%20surf%20photography%20business%20case%20study%20by%20%40surfpreneurco%20http%3A//adamwrites.co/north-sea-case-study" class="share__link" target="_blank"><i class="fa fa-twitter"></i></a>
+					<a href="https://twitter.com/home?status=Check%20out%20this%20surf%20photography%20business%20case%20study%20by%20%40adamandthesea%20http%3A//adamwrites.co/north-sea-case-study" class="share__link" target="_blank"><i class="fa fa-twitter"></i></a>
 				</li>
 								<li class="share__item">
 					<a href="https://www.linkedin.com/shareArticle?mini=true&url=http%3A//adamwrites.co/north-sea-case-study&title=A%20Surf%20Photography%20Business%20Case%20Study&summary=A%20look%20at%20the%20media,%20marketing,%20and%20writing%20behind%20the%20surf%20photography%20business,%20North%20Sea%20Surf%20Shots.&source=" class="share__link" target="_blank"><i class="fa fa-linkedin"></i></a>
